SERVER-6116 disable versioning of M/R counts with versionOk block